--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -5,13 +5,12 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
 }
 
 body {
-  font-family: Epilogue, sans-serif;
+  font-family: 'Fira Code', monospace !important;
   line-height: normal;
   font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: inherit;
   font-weight: bold;
 }
 
